Fixed word break on the full blog layout

--- a/assets/scss/layouts/_blog-full.scss
+++ b/assets/scss/layouts/_blog-full.scss
@@ -11,5 +11,17 @@ body.blog {
         .entry-content {
             margin-top: 10px;
         }
+
+        .article-content {
+            width: calc(100vw - 30px);
+
+            @include media-tablet {
+                max-width: 708px;
+            }
+
+            @include media-desktop {
+                max-width: 920px;
+            }
+        }
     }
 }
